<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>eliasstar</groupId>
  <artifactId>json-rpc</artifactId>
  <version>0.1.0</version>
  <packaging>jar</packaging>

  <name>JsonRpc4J</name>
  <description>A general JSON-RPC 2.0 Wrapper for Java</description>
  <url>https://github.com/EliasStar/JsonRpc4J</url>
  <inceptionYear>2020</inceptionYear>

  <licenses>
    <license>
      <name>LGPL-3.0-only</name>
      <url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
      <distribution>repo</distribution>
      <comments>GNU LESSER GENERAL PUBLIC LICENSE</comments>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/EliasStar/JsonRpc4J.git</connection>
    <developerConnection>scm:git:https://github.com/EliasStar/JsonRpc4J.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/EliasStar/JsonRpc4J</url>
  </scm>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/EliasStar/JsonRpc4J/issues</url>
  </issueManagement>

  <properties>
    <maven.compiler.source>14</maven.compiler.source>
    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.6</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
      <optional>true</optional>
    </dependency>
  </dependencies>

  <build>
    <defaultGoal>package</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>${maven.compiler.target}</release>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <additionalOptions>--enable-preview</additionalOptions>
          <release>${maven.compiler.target}</release>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

</project>